--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ yarn-debug.log*
 yarn-error.log*
 
 # Logsgit rm --cached -r node_modules
-
-logs/
 *.log
 *.log.*
 
@@ -1024,3 +1022,5 @@ __pycache__/
 *.pyd
 *.pyo
 *.pyd
+
+.codegpt
